welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:2: error: ';' expected but ')' found.
(!outsideMode && 1<=n && n<=10)|| (1>=n && n<=10))&&outsideMode} 
                                                 ^